# speech-synthesis-spotify

./: .gitignore  .gitmodules  LICENSE.txt  README.md  docker_instructions.txt  filtering_structure.txt  gathering_data.py  get-data.sh  guild.yml  pyproject.toml  requirements.txt  search-data.py  spectrogram.py  valid_shows_10h.txt  valid_shows_20h-distributed.txt  valid_shows_20h.txt  valid_shows_6h.txt  valid_shows_no_time.txt
data/: README.txt
data/spotify-podcasts-2020/0/show_600u26rsWE63UsQl6oCZDW/: 0SwP0ZaZduX1EbZWf1fhNu.json
data/spotify-podcasts-2020/0/show_60jwFHRBlsK6YsDOup8FWM/: 6hTdUKMwhZ8hB2pQe8s3ck.json  6x4geLl1FaEySiTGEVx08v.json
synthesis/: run-pretrain-gpus.sh  run-regular.sh  test.py
synthesis/breath/: 1_ExtractBreathGroups.py  arr_0.npy  detect.py  helpers.py  model.h5  readme.txt  segment.py  segmenting.py  zcrgrams.py
synthesis/data/: convert.py
synthesis/data/download/: audio.py  paths.py  transcripts.py
synthesis/datadownload/: convert.py
synthesis/datadownload/download/: audio.py  transcripts.py
synthesis/filter/: filter_segments.py  merge_text.py  prepare_taco_data.py  segment.py
synthesis/filtering/: audio_filtering.py  data.in  example.py  features_test.py  ffmpeg.sh  filter.py  filter_utils.py  filtered_ep.json  filtered_ep.out  filtered_show.json  input_segments.json  intervals.json  ljs_audio_text_train_filelist.txt  merged.json  merging_test.py  notes-input.txt  notes.txt  prepare_taco_data.py  segment.py  speechrate.praat  test.py  transcripts_merging.py  utilsfilter.py
synthesis/filtering/testdata/: 7td2k4hXAbJsqc5Lvroyah.json
synthesis/tacotron2/: .hparams.py.swp  hparams.py  run-gpus.sh
synthesis/tacotron2/filelists/: ljs_audio_text_test_filelist.txt  ljs_audio_text_train_filelist.txt
tacotron2/: eva_instructions.txt  hparams.py  requirements.txt
