[tool.poetry]
name = "speech-synthesis-spotify"
version = "0.1.0"
description = ""
authors = ["malyvsen <5940672+malyvsen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.6.9"
guildai = "^0.7.2"
SoundFile = "^0.10.3"
Keras = "^2.4.3"
opencv-python = "^4.5.1"
tensorflow = "^2.4.1"
scipy = "^1.5.4"
scikit-image = "^0.17.2"
praatio = "^4.2.1"
Pillow = "^8.1.1"
librosa = "^0.8.0"
tqdm = "^4.58.0"
numpy = "^1.19.5"
g2p-en = "^2.1.0"
matplotlib = "^3.3.4"
praat-parselmouth = "^0.4.0"
manydo = "^0.1.4"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
